Fix alignment again...

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <nav id="navbar">
       <ul>
         <li><a class="site-title" rel="author" href="http://blog.remidebord.fr/">Rémi Debord</a></li>
-        <li><a href="http://blog.remidebord.fr/">Home</a></li>
+        <li><a href="http://blog.remidebord.fr/" class="selected" ><span class="selected-decorate">.: </span>Home<span class="selected-decorate"> :.</span></a></li>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="https://outlook.live.com">Mailbox</a></li>
         <li><a href="https://github.com/remidebord">Github</a></li>
@@ -21,6 +21,8 @@
         </li>
         <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
         <li><a href="https://www.youtube.com/@remidebord9237/playlists">Radio</a></li>
+        <li class="li-right"><a href="/search/">Search</a></li>
+        <li class="li-right"><a href="/files/">Files</a></li>
         <li class="dropdown li-right">
           <a href="/links/">Links</a>
           <div class="dropdown-content">
@@ -40,8 +42,6 @@
               <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
           </div>
         </li>
-        <li class="li-right"><a href="/files/">Files</a></li>
-        <li class="li-right"><a href="/search/">Search</a></li>
       </ul>
     </nav>
   </div>
