--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <li><a href="/blog/">Blog</a></li>
         <li><a href="https://outlook.live.com">Mailbox</a></li>
         <li><a href="https://github.com/remidebord">Github</a></li>
-        <li><a href="http://mywawa.free.fr">Archive</a></li>
+        <li><a href="http://mywawa.free.fr">Archives</a></li>
         <li class="dropdown">
           <a href="#">Utils</a>
           <div class="dropdown-content">
