--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -32,7 +32,10 @@
 
 body {        
     background-color: var(--black-light-color);
-    margin: 8px;
+    margin-top: 8px;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 0px;
 }
 
 html, body, footer {
