--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+{% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+{% endfor %}
+
 <div class="blog">
   {% if site.paginate %}
     {% assign posts = paginator.posts %}
