--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,11 @@ layout: default
 ---
 
 <div class="blog">
-  {% assign posts = site.posts %}
+  {% if site.paginate %}
+    {% assign posts = paginator.posts %}
+  {% else %}
+    {% assign posts = site.posts %}
+  {% endif %}
 
   {%- if posts.size > 0 -%}
     {%- if page.list_title -%}
