--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -158,6 +158,7 @@ table th, table td {
 .site-header {
     border-top: none;
     border-bottom: none /* 1px solid #333 */;
+    margin-top: 8px;
 }
 
 .site-title, .site-title:visited {
