--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,6 +1,8 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
+$content-width:    1000px;
+$on-laptop:        1000px;
 
 /* Colors:
  * - blue: #9CDCFE (links)
@@ -234,7 +236,7 @@ table th, table td {
 }
 
 .home {
-    padding-top: 30%;
+    padding-top: 20%;
 }
 
 /* custom Scrollbar */
