--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -342,6 +342,21 @@ table th, table td {
     float: right; /* Move Links and Files on the right side of the screen */
 }
 
+/* News */
+
+.news {
+    text-align: left;
+    
+    /* Add some space to the news area */
+    padding-top: 48px;
+    padding-bottom: 48px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    
+    line-height: 20px;
+}
+
 /* Footer */
 
 footer {
