Add Ascii hex converter

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
           <a href="#">Utils</a>
           <div class="dropdown-content">
             <p class="dropdown-header">Dev</p>
+              <a href="/ascii_hex/">Ascii/Hex Converter</a>
               <a href="https://elixir.bootlin.com/linux/v6.3.10/source">Bootlin's Elixir</a>
               <a href="https://godbolt.org/">Compiler Explorer</a>
               <a href="https://lospec.com/pixel-art-scaler/">Pixel Art scaler</a>
