--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
         <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
         <li><a href="https://www.youtube.com/@remidebord9237/playlists">Radio</a></li>
         <li class="li-right"><a href="/search/">Search</a></li>
-        <li class="li-right"><a href="/files/">Files</a></li>
+        <li class="li-right"><a href="https://www.icloud.com/iclouddrive/">Files</a></li>
         <li class="dropdown li-right">
           <a href="/links/">Links</a>
           <div class="dropdown-content">
