--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer h-card">
   <div>
     <p>
-      Copyright © 2007-2024
+      Copyright <a class="wrz" href="/wrz/">©</a> 2007-2024
       {% if site.author.email -%}
         <a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>
       {%- endif %}
