--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
               <a href="https://godbolt.org/">Compiler Explorer</a>
               <a href="https://lospec.com/pixel-art-scaler/">Pixel Art scaler</a>
               <a href="https://ideogram.ai/">Ideogram</a>
-              <a href="https://digipdf.app/">DigiPDF</a>
+              <a href="https://stirlingpdf.io/">StirlingPDF</a>
           </div>
         </li>
         <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
