Add tool and fix dropdown-header display

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,11 @@
               <a href="/ascii_hex/">Ascii/Hex Converter</a>
               <a href="https://elixir.bootlin.com/linux/v6.3.10/source">Bootlin's Elixir</a>
               <a href="https://godbolt.org/">Compiler Explorer</a>
+            <p class="dropdown-header">Misc</p>
               <a href="https://lospec.com/pixel-art-scaler/">Pixel Art scaler</a>
               <a href="https://ideogram.ai/">Ideogram</a>
               <a href="https://stirlingpdf.io/">StirlingPDF</a>
+              <a href="https://cobalt.tools/">Cobalt tools</a>
           </div>
         </li>
         <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
