--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -336,6 +336,8 @@ table th, table td {
 #navbar .dropdown-header {
     display: block;
     padding: 0px 10px;
+    margin-top: 15px;
+    margin-bottom: 0px;
 }
 
 #navbar .li-right {
