--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="wrapper-header">
     <nav id="navbar">
       <ul>
-        <li><a class="site-title" rel="author" href="http://blog.remidebord.fr/">Rémi Debord</a></li>
+        <li><a class="site-title" rel="author" href="https://remidebord.fr/">Rémi Debord</a></li>
         <li><a href="https://remidebord.fr/" class="selected" ><span class="selected-decorate">.: </span>Home<span class="selected-decorate"> :.</span></a></li>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="https://outlook.live.com">Mailbox</a></li>
