Add lobster script

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,3 +16,5 @@
 
 <script type="text/javascript" src="{{ site.baseurl }}/plugins/lightbox/lightbox.js"></script>
 <link rel="stylesheet" href="{{ site.baseurl }}/plugins/lightbox/lightbox.css">
+
+<script type="text/javascript" src="{{ site.baseurl }}/plugins/lobster.js"></script>
