--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
               <a href="https://cobalt.tools/">Cobalt tools</a>
           </div>
         </li>
-        <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
+        <li><a href="https://coinmarketcap.com/">Crypto</a></li>
         <li><a href="https://www.youtube.com/@remidebord9237/playlists">Radio</a></li>
         <li class="li-right"><a href="/search/">Search</a></li>
         <li class="li-right"><a href="https://mega.nz/fm/IMYjXYLb">Files</a></li>
