--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
               <a href="http://www.electronics-lab.com/blog/">Electronics-Lab</a>
               <a href="http://dangerousprototypes.com/blog/">Dangerous Prot.</a>
             <p class="dropdown-header">Mountaineering</p>
-              <a href="https://fatmap.com/adventures/@42.8103648,0.9769227,12767.1754113,-31.2365567,142.8287158,1642.5304259,satellite">FATMAP</a>
+              <a href="https://skimomap.com/">SkiMoMap</a>
               <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
           </div>
         </li>
